tests/FAIL/noClosingParen.py
# EXPECT ERROR: [line 2] Error at 'NEWLINE': Expect parameter name.
cat T(
